tests/ui-stable/no-arguments.stderr
error: proc-macro derive panicked
 --> $DIR/no-arguments.rs:4:5
  |
4 |     indoc!();
  |     ^^^^^^^^^
  |
  = help: message: argument must be a single string literal, but got 0 tokens
  = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)
